# RKAIQ-Camera-Demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  aiq_control.cpp  aiq_control.h  camir_control.c  camir_control.cpp  camir_control.h  camrgb_control.c  camrgb_control.cpp  camrgb_control.h  common.h  display.c  main.c  main.cpp  rkdrm_display.h
include/: xf86drm.h  xf86drmMode.h
include/rkaiq/: rkisp_api.h
